--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
     tools:context=".MainActivity">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtProduto"
-        android:hint="Nome do Produto" />
-
     <Button
+        android:id="@+id/btnAdicionar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/btnInserir"
-        android:text="Inserir" />
+        android:text="Adicionar Itens" />
+
+    <TextView
+        android:id="@+id/txtTotal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="Total: 0,00"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <ListView
+        android:id="@+id/listViewProdutos"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/listViewProdutos"/>
+        android:layout_height="wrap_content" />
 
 
 </LinearLayout>
