--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -1,59 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="vertical"
-android:padding="16dp"
-tools:context=".MainActivity">
-
-<TextView
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="15dp"
-    android:text="Cadastrar produto"
-    android:textSize="21sp"
-    android:textStyle="bold" />
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp"
+    tools:context=".CadastroActivity">
 
-<ImageView
-    android:layout_width="100dp"
-    android:layout_height="100dp"
-    android:layout_gravity="center_horizontal"
-    />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Cadastrar Produto"
+        android:textStyle="bold"
+        android:textSize="21sp"
+        android:layout_marginBottom="15dp"/>
 
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@android:drawable/ic_menu_camera"
+        android:id="@+id/imgFotoProduto"
+        android:layout_gravity="center_horizontal"/>
 
-<ImageView
-    android:id="@+id/imgFotoProduto"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
-    android:layout_gravity="center_horizontal"
-    android:src="@android:drawable/ic_menu_camera" />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtProduto"
+        android:hint="Nome do Produto"
+        android:inputType="text"/>
 
-<EditText
-    android:id="@+id/txtProduto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:hint="Nome do Produto" />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtQtde"
+        android:inputType="number"
+        android:hint="Quantidade" />
 
-<EditText
-    android:id="@+id/txtQtde"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:hint="Quantidade"
-    android:inputType="number" />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtValor"
+        android:inputType="numberDecimal"
+        android:hint="R$ 0.00" />
 
-<EditText
-    android:id="@+id/txtValor"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:hint="R$ 0.00"
-    android:inputType="numberDecimal" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Inserir"
+        android:id="@+id/btnInserir"/>
 
-<Button
-    android:id="@+id/btnInserir"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Inserir" />
 
 </LinearLayout>
