--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,27 +8,30 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
 
+    >
     <Button
-        android:id="@+id/btnAdicionar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/btnAdicionar"
         android:text="Adicionar Itens" />
 
     <TextView
-        android:id="@+id/txtTotal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:text="Total: 0,00"
+        android:id="@+id/txtTotal"
+        android:text="TOTAL: 0.00"
         android:textSize="24sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"/>
+
+
 
     <ListView
         android:id="@+id/listViewProdutos"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"/>
 
 
 </LinearLayout>
