--- a/app/src/main/res/layout/list_view_item.xml
+++ b/app/src/main/res/layout/list_view_item.xml
@@ -1,61 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_vertical"
     android:minHeight="50dp"
-    android:orientation="horizontal"
+    android:gravity="center_vertical"
     android:padding="5dp">
 
     <ImageView
-        android:id="@+id/imgItemFoto"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@android:drawable/ic_menu_camera" />
-
+        android:src="@android:drawable/ic_menu_camera"
+        android:id="@+id/imgItemFoto"/>
     <TextView
-        android:id="@+id/txtItemProduto"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_weight="1"
+        android:id="@+id/txtItemProduto"
         android:textSize="18sp"
-        android:textStyle="bold" />
-
+        android:textStyle="bold"
+        android:layout_gravity="center"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:id="@+id/txtItemQtde"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Qtde"
                 android:textSize="18sp"
-                android:textStyle="bold" />
+                android:text="Qtde "
+                android:textStyle="bold"/>
 
         </LinearLayout>
-
         <TextView
-            android:id="@+id/txtItemValor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/txtItemValor"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
     </LinearLayout>
-
 
 </LinearLayout>
