--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/teal_200">
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/txtProduto"
-        android:hint="Nome do Produto" />
+        android:hint="Nome do Produto"
+        android:background="@color/white"
+        />
 
     <Button
         android:layout_width="match_parent"
@@ -19,9 +22,11 @@
         android:text="Inserir" />
 
     <ListView
+        android:id="@+id/listViewProdutos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/listViewProdutos"/>
+        android:background="@color/purple_200"
+        />
 
 
 </LinearLayout>
