--- a/app/src/main/res/layout/list_view_item.xml
+++ b/app/src/main/res/layout/list_view_item.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:minHeight="50dp"
     android:gravity="center_vertical"
-    android:padding="5dp">
+    android:padding="5dp"
+   >
 
     <ImageView
         android:layout_width="50dp"
@@ -19,7 +20,8 @@
         android:id="@+id/txtItemProduto"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:background="@color/purple_200"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
