--- a/app/src/main/res/layout/list_view_item.xml
+++ b/app/src/main/res/layout/list_view_item.xml
@@ -21,7 +21,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         android:layout_gravity="center"
-        android:background="@color/purple_200"/>
+       />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -50,6 +50,7 @@
             android:id="@+id/txtItemValor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="0.00"
             android:textSize="18sp"
             android:textStyle="bold" />
 
