--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="@color/teal_200"
     tools:context=".MainActivity">
 
     <Button
@@ -29,8 +28,7 @@
     <ListView
         android:id="@+id/listViewProdutos"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/purple_500"/>
+        android:layout_height="wrap_content" />
 
 
 </LinearLayout>
